--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-
+    <link rel="shortcut icon" href="./img/logo_indocement.png" type="image/x-icon">
+    
     <title>Semen Tiga Roda</title>
 </head>
 <body>
